Fixed issue with block quote causing horizontal scroll

--- a/assets/sass/output/style.css
+++ b/assets/sass/output/style.css
@@ -2341,7 +2341,7 @@ blockquote {
   display: inline-block;
   font-size: 16px;
   font-style: italic;
-  margin-bottom: 30px;
+  margin: 0 0 30px 0;
   text-align: center;
   width: 100%; }
   blockquote p {
